adding native set props methods